# pubroulette-api

./: Cargo.toml  README.md  go.mod  go.sum  vercel.json
api/: crawl.go  crawl.rs  handler.go  main.rs  play.go  play.rs
cmd/: main.go
internal/handler/: pub.go
internal/osm/: nominatim.go  overpass.go  tags.go  types.go
internal/osm/filter/: filters.go  tags_filter.go  whitelist.go
internal/pub/: pub.go
internal/roulette/: errors.go  pub.go  roulette.go
internal/whatpub/: service_times_parser.go  whatpub.go
pkg/blacklist/: blacklist.go
pkg/googleplaces/: client.go  schema.go
pkg/osm/: nominatim.go  nominatim_test.go  overpass.go  overpass_test.go  places.go  places_test.go  tags.go  tags_test.go
pkg/osmoverpass/: client.go  geocode.go  places.go
pkg/osrm/: client.go
pkg/pub/: finder.go  osm.go  pub.go
pkg/redis-client/: redis.go
pkg/roulette/: blacklist.go  blacklist_test.go  errors.go  filter.go  pub.go  roulette.go  roulette_test.go  validator.go  validator_test.go
pkg/verification/: verification.go
pkg/whatpub/: scraper.go  service_times.go  whatpub.go  whatpub_test.go
src/: lib.rs  main.rs  osm.rs  roulette.rs
test/data/: osm-rep.json
