[package]
name = "pubroulette-api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "play"
path = "api/play.rs"

[[bin]]
name = "crawl"
path = "api/crawl.rs"

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.8.6"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.24", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
rand = "0.8"
validator = { version = "0.20", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = ["cors"] }
http = "1.3.1"
tower = "0.4"
tower_governor = { version = "0.8" }
vercel_runtime = "1.1.6"
serde_urlencoded = "0.7.1"